objects/fferpcore__ScheduledJobLog__c.object
<CustomObject>
    <customHelpPage>fferpcore__ScheduledJobLogHelp</customHelpPage>
    <fields>
        <fullName>fferpcore__BatchRun__c</fullName>
        <label>Batch ID</label>
        <referenceTo>fferpcore__ScheduledJobRun__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing document that was processed in the batch to which this log relates.</description>
        <inlineHelpText>Lookup to the billing document that was processed in the batch to which this log relates.</inlineHelpText>
        <label>Billing Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Batch Logs</relationshipLabel>
        <relationshipName>BatchLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__LogMessage__c</fullName>
        <label>Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduled Job Log</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__LogMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Job Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>